Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14826

Regression of 0.4.9-dev-762-g94ead99 - Winamp 5.666 from rapps application takes several minutes to startup

    XMLWordPrintable

Details

    Description

      0.4.9-release-0-ga920a96
      Winamp 5.666 from rapps.

      I could start the app after installation (leaving everything default and Bentoo skin active) in 0.4.8RC25 still (with continuable GDI assertion of CORE-10774, but that does not matter here).

      When I try the same in 0.4.9-release-0-ga920a96, the application "deadlocks" for me upon startup while Win32SS messagequeue spamming.
      winamp.log
      winamp.png
      After around 8minutes that waiting time is over and (then come the well-known assertions of CORE-10774) then the application finally starts. During the whole waiting time the green (read indication) LED in VBox is permanently on (not flashing, but permanently on).

      Goal of the ticket is to speed up the apps start again.

      Attachments

        1. winamp.png
          60 kB
          reactosfanboy
        2. winamp.log
          67 kB
          reactosfanboy
        3. breakingManuallyAFewTimes_l2l.log
          110 kB
          reactosfanboy
        4. winampStartupRegressiontest.txt
          3 kB
          reactosfanboy
        5. optimize-speed.patch
          1 kB
          Katayama Hirofumi MZ
        6. optimize-speed-3.patch
          2 kB
          Katayama Hirofumi MZ
        7. optimize-speed-4.patch
          2 kB
          Katayama Hirofumi MZ
        8. file_delay_close_enable.patch
          2 kB
          DougLyons
        9. democorr.exe
          31 kB
          DougLyons
        10. fat_corruption_HACK_test.patch
          2 kB
          DougLyons
        11. optimize-speed-5.patch
          0.6 kB
          DougLyons
        12. 0.4.15-dev-1636-gf634010_withOptimize5_RunningOutOf_NPEXPANSIONPOOL_duringGitClone.log
          54 kB
          reactosfanboy
        13. 0.4.15-dev-1636-gf634010_withOptimize5_RunningOutOf_NPEXPANSIONPOOL_duringGitClone.png
          33 kB
          reactosfanboy

        Issue Links

          Activity

            People

              zefklop jgardou
              reactosfanboy reactosfanboy
              Votes:
              3 Vote for this issue
              Watchers:
              12 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: